Add play and shuffle buttons to playlists
